fixing some spacing inconsistency in games pages

--- a/game.css
+++ b/game.css
@@ -5,6 +5,11 @@ h3 {
     text-align: left
 }
 
+summary {
+    padding-left: 30px;
+    width: 60vw;
+}
+
 summary > p {
     padding-bottom: 1.5em;
 }
@@ -61,6 +66,10 @@ h4 {
     padding-bottom: 0.3em;
     font-size: 1.2em;
     text-align: left
+}
+
+.gameButtons {
+    padding: 0px 30px;
 }
 
 .gameButtons > a {
